--- a/project_progra/src/main/resources/application.properties
+++ b/project_progra/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=project_progra
+
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_1
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#configuraciones de jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+#Dialecto
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
