--- a/proyecto_2/progra_4/src/main/resources/application.properties
+++ b/proyecto_2/progra_4/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.show-sql=true
 
 #Dialecto
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Configuración de Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
