--- a/proyecto_2/progra_4/src/main/resources/application.properties
+++ b/proyecto_2/progra_4/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=progra_4
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_1
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_2
 spring.datasource.username=root
 
-spring.datasource.password=root
+spring.datasource.password=1234
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
