--- a/proyecto_2/progra_4/src/main/resources/application.properties
+++ b/proyecto_2/progra_4/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_1
 spring.datasource.username=root
 
 
-spring.datasource.password=Liger.2024
+spring.datasource.password=root
 
 
 
